# Netflix-kingdom-

./: .replit  pyproject.toml  replit.md
artifacts/bot/: main.py  render.yaml  requirements.txt  run.py  server.py
artifacts/bot-fixes/: main_validate_job.py
artifacts/bot-fixes/src/: database_additions.py  keyboards_patch.py
artifacts/bot-fixes/src/handlers/: admin_validate.py
artifacts/bot/data/: netflix_kingdom.db
artifacts/bot/data/temp/Results_NETFLIX_1778400746/NETFLIX/Basic/: 1778400702022_437987.txt  1778400702177_795712.txt  1778400704688_515590.txt  1778400706732_24736.txt  1778400706807_699838.txt  1778400712415_169793.txt  1778400714258_358491.txt  1778400716274_446696.txt  1778400718209_162438.txt  1778400721430_187570.txt  1778400723386_764798.txt  1778400723627_830325.txt  1778400726618_981788.txt  1778400726853_583665.txt  1778400727517_259975.txt  1778400728266_538053.txt  1778400729897_735573.txt  1778400731884_470850.txt  1778400732340_496105.txt  1778400733016_305394.txt  1778400733361_391765.txt  1778400737557_845707.txt  1778400740590_670719.txt  1778400743821_656626.txt
artifacts/bot/data/temp/Results_NETFLIX_1778400746/NETFLIX/Premium/: 1778400702161_113784.txt  1778400707539_804106.txt  1778400707898_698283.txt  1778400707956_447451.txt  1778400708598_761524.txt  1778400708953_549586.txt  1778400713619_786084.txt  (+23 more)
artifacts/bot/src/: config.py  database.py  keyboards.py
artifacts/bot/src/handlers/: admin.py  codes.py  db_channel.py  logger.py  menu.py  redeem.py  start.py
artifacts/bot/src/utils/: animations.py  helpers.py
(+65 files in other folders)
