[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.1",
    "aiosqlite==0.19.0",
    "flask==3.0.0",
    "humanize==4.9.0",
    "psutil==5.9.7",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
]
